<resources>

    <string name="server_url">http://192.168.13.2:8000/</string>


    <string name="app_name">Nertia</string>
    <string name="enter_uname">Enter Username</string>
    <string name="enter_name">Enter Full Name</string>
    <string name="enter_pwd">Enter password</string>
    <string name="login">LOGIN</string>
    <string name="osignup_title">Owner Signup</string>
    <string name="onum">Enter Phone Number</string>
    <string name="salon_name">Enter Salon Name</string>
    <string name="oaddr">Enter Salon Address</string>
    <string name="ocity">Enter City</string>
    <string name="ostate">Enter State</string>
    <string name="opincode">Enter Pincode</string>
    <string name="onumbranches">No. of Branches</string>
    <string name="signup">SIGNUP</string>
    <string name="sSignup">Stylist Signup</string>
    <string name="salonid">Enter Branch ID</string>
    <string name="sexp">Experience (in years)</string>
    <string name="sexpt">Expertise(Write - if no expertise).</string>
    <string name="home">HOME</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="omail">Enter E-mail ID</string>
    <string name="enlogin">Enter Username(for login)</string>
    <string name="osignlabel"><u>Salon Signup</u></string>
    <string name="ssignlabel">Stylist Signup</string>
    <string name="Query">Submit Query</string>
    <string name="enter_query">Enter your Query in 500 characters.</string>
    <string name="submit">SUBMIT</string>
    <string name="newtrends">New Trends</string>
    <string name="card_img">CardImage</string>
    <string name="card_title">Card Title</string>
    <string name="card_text">Card Text</string>
    <string name="personadev">Personality</string>
    <string name="salesreg">Sales Reg</string>
    <string name="create_salon_btn"><u>Create Salon</u></string>
    <string name="create_salon"><u>Create Salon</u></string>
    <string name="add_branch"><u>Add Branch</u></string>
    <string name="enter_bname">Enter Branch name</string>
    <string name="baddr">Enter Branch Address</string>
    <string name="beauty_training">Beauty Training</string>
    <string name="topic">topic</string>
    <string name="blinks_title"><u>Videos</u></string>
    <string name="bdques_label"><u>Questions</u></string>
    <string name="enter_ans">Enter your answer…</string>
    <string name="submit_all_bans">Submit All Answers</string>
    <string name="date">Date</string>
    <string name="servicename">Service</string>
    <string name="cost">Cost</string>
    <string name="send_ser">adding service button</string>
    <string name="time">time</string>
    <string name="tsalonid">Salon ID</string>
    <string name="tbranchid">Branch ID</string>
    <string name="change_branch">Branch Options</string>
    <string name="branchname">Branch Name</string>
    <string name="setcurrent">Set Current</string>
    <string name="todaysales">Today\'s Total Sales</string>
    <string name="styname">Stylist name</string>
    <string name="styuname">Stylist Username</string>
    <string name="stysales">StylistSales</string>
    <string name="sales_detail">Sales Detail</string>
    <string name="username">Username</string>
    <string name="fullname">Full Name</string>
    <string name="dashboard">Dashboard</string>
    <string name="name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="experience">Experience</string>
    <string name="expertise">Expertise</string>
    <string name="edit">EDIT</string>
    <string name="myacc">My Account</string>
    <string name="editacc">Edit Account</string>
    <string name="save">SAVE</string>
    <string name="thisMcost">This Month Sales</string>
    <string name="lastMcost">Last Month Cost</string>
    <string name="getpdf">Get PDF</string>
    <string name="startdate">Start Date</string>
    <string name="enterstartdate">Enter Start Date</string>
    <string name="enddate">End Date</string>
    <string name="enterenddate">Enter End Date</string>
    <string name="export">EXPORT</string>
    <string name="smonthcost">Month\'s Total</string>
    <string name="report">Report</string>
    <string name="enter_salid">Enter Salon ID</string>
    <string name="type_pick">Report of</string>
    <string name="oenterotp">Enter OTP</string>
    <string name="cont">Continue</string>
    <string name="chk_otp">Check OTP</string>
    <string name="getotp">Get OTP</string>
</resources>
